--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -48,30 +48,32 @@
         //data
         var lanes = ["Chinese", "Japanese", "Korean"],
             laneLength = lanes.length,
-            items = [{ "lane": 0, "id": "Qin", "start": 5, "end": 205 },
-            { "lane": 0, "id": "Jin", "start": 265, "end": 420 },
-            { "lane": 0, "id": "Sui", "start": 580, "end": 615 },
-            { "lane": 0, "id": "Tang", "start": 620, "end": 900 },
-            { "lane": 0, "id": "Song", "start": 960, "end": 1265 },
-            { "lane": 0, "id": "Yuan", "start": 1270, "end": 1365 },
-            { "lane": 0, "id": "Ming", "start": 1370, "end": 1640 },
-            { "lane": 0, "id": "Qing", "start": 1645, "end": 1910 },
-            { "lane": 1, "id": "Yamato", "start": 300, "end": 530 },
-            { "lane": 1, "id": "Asuka", "start": 550, "end": 700 },
-            { "lane": 1, "id": "Nara", "start": 710, "end": 790 },
-            { "lane": 1, "id": "Heian", "start": 800, "end": 1180 },
-            { "lane": 1, "id": "Kamakura", "start": 1190, "end": 1330 },
-            { "lane": 1, "id": "Muromachi", "start": 1340, "end": 1560 },
-            { "lane": 1, "id": "Edo", "start": 1610, "end": 1860 },
-            { "lane": 1, "id": "Meiji", "start": 1870, "end": 1900 },
-            { "lane": 1, "id": "Taisho", "start": 1910, "end": 1920 },
-            { "lane": 1, "id": "Showa", "start": 1925, "end": 1985 },
-            { "lane": 1, "id": "Heisei", "start": 1990, "end": 1995 },
-            { "lane": 2, "id": "Three Kingdoms", "start": 10, "end": 670 },
-            { "lane": 2, "id": "North and South States", "start": 690, "end": 900 },
-            { "lane": 2, "id": "Goryeo", "start": 920, "end": 1380 },
-            { "lane": 2, "id": "Joseon", "start": 1390, "end": 1890 },
-            { "lane": 2, "id": "Korean Empire", "start": 1900, "end": 1945 }]
+            items = [
+                {"lane": 0, "id": "Qin", "start": 5, "end": 205},
+                {"lane": 0, "id": "Jin", "start": 265, "end": 420},
+                { "lane": 0, "id": "Sui", "start": 580, "end": 615 },
+                { "lane": 0, "id": "Tang", "start": 620, "end": 900 },
+                { "lane": 0, "id": "Song", "start": 960, "end": 1265 },
+                { "lane": 0, "id": "Yuan", "start": 1270, "end": 1365 },
+                { "lane": 0, "id": "Ming", "start": 1370, "end": 1640 },
+                { "lane": 0, "id": "Qing", "start": 1645, "end": 1910 },
+                { "lane": 1, "id": "Yamato", "start": 300, "end": 530 },
+                { "lane": 1, "id": "Asuka", "start": 550, "end": 700 },
+                { "lane": 1, "id": "Nara", "start": 710, "end": 790 },
+                { "lane": 1, "id": "Heian", "start": 800, "end": 1180 },
+                { "lane": 1, "id": "Kamakura", "start": 1190, "end": 1330 },
+                { "lane": 1, "id": "Muromachi", "start": 1340, "end": 1560 },
+                { "lane": 1, "id": "Edo", "start": 1610, "end": 1860 },
+                { "lane": 1, "id": "Meiji", "start": 1870, "end": 1900 },
+                { "lane": 1, "id": "Taisho", "start": 1910, "end": 1920 },
+                { "lane": 1, "id": "Showa", "start": 1925, "end": 1985 },
+                { "lane": 1, "id": "Heisei", "start": 1990, "end": 1995 },
+                { "lane": 2, "id": "Three Kingdoms", "start": 10, "end": 670 },
+                { "lane": 2, "id": "North and South States", "start": 690, "end": 900 },
+                { "lane": 2, "id": "Goryeo", "start": 920, "end": 1380 },
+                { "lane": 2, "id": "Joseon", "start": 1390, "end": 1890 },
+                { "lane": 2, "id": "Korean Empire", "start": 1900, "end": 1945 }
+        ],
         timeBegin = 0,
             timeEnd = 2000;
     </script>
@@ -197,30 +199,35 @@
 
         mini.append("g")
             .attr("class", "brush")
-            .call(brush)
-            .call(brush.move, [[307, 167], [611, 539]]);
+            .call(brush);
+        // .call(brush.move, [[307, 167], [611, 539]]);
 
-        display();
+        // display();
 
         function display() {
             // console.log(d3.event);
-            var rects, labels,
-                minExtent = brush.extent()[0],
-                maxExtent = brush.extent()[1];
+            // var rects, labels,
+            //     minExtent = brush.extent()[0],
+            //     maxExtent = brush.extent()[1];
 
-            var minExtent = d3.event.selection[0];
-            var maxExtent = d3.event.selection[1];
+
+            var minExtent = d3.event.selection.map(x.invert)[0];
+            var maxExtent = d3.event.selection.map(x.invert)[1];
 
             // console.log(d3.event.selection);
-            var visItems = items.filter(function (d) { return d.start < maxExtent && d.end > minExtent; });
+            var visItems = items.filter(function (d) {
+                return d.start < maxExtent && d.end > minExtent;
+            });
 
-            mini.select(".brush")
-                .call(brush.extent([minExtent, maxExtent]));
+            console.log("Visible items: " + visItems.length);
+            // console.log(d3.event.selection.map(x.invert));
+            // mini.select(".brush")
+            //     .call(brush.extent([minExtent, maxExtent]));
 
             x1.domain([minExtent, maxExtent]);
 
             //update main item rects
-            rects = itemRects.selectAll("rect")
+            var rects = itemRects.selectAll("rect")
                 .data(visItems, function (d) { return d.id; })
                 .attr("x", function (d) { return x1(d.start); })
                 .attr("width", function (d) { return x1(d.end) - x1(d.start); });
@@ -235,7 +242,7 @@
             rects.exit().remove();
 
             //update the item labels
-            labels = itemRects.selectAll("text")
+            var labels = itemRects.selectAll("text")
                 .data(visItems, function (d) { return d.id; })
                 .attr("x", function (d) { return x1(Math.max(d.start, minExtent) + 2); });
 
