--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,9 @@
     <title>Chronological Diagram of Asia</title>
     <script type="text/javascript" src="d3.js"></script>
     <style type="text/css">
+    body {
+        margin: 0;
+    }
         .chart {
             shape-rendering: crispEdges;
         }
@@ -19,18 +22,18 @@
         }
 
         .miniItem0 {
-            fill: darksalmon;
+            fill: rgb(134, 96, 227);
             stroke-width: 6;
         }
 
         .miniItem1 {
-            fill: darkolivegreen;
+            fill: rgb(237, 185, 56);
             fill-opacity: .7;
             stroke-width: 6;
         }
 
         .miniItem2 {
-            fill: slategray;
+            fill:rgb(91, 141, 223);
             fill-opacity: .7;
             stroke-width: 6;
         }
