--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,12 +13,15 @@
             shape-rendering: crispEdges;
         }
 
-        .mini text {
+        .span-text {
             font: 9px sans-serif;
+            color: white;
+            fill: "white",
         }
 
         .main text {
             font: 12px sans-serif;
+            color: white;
         }
 
         .miniItem0 {
