--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,16 +29,17 @@
             stroke-width: 6;
         }
 
-        .miniItem1 {
-            fill: rgb(237, 185, 56);
-            fill-opacity: .7;
-            stroke-width: 6;
+        .span {
+            fill:rgb(91, 141, 223);
+            fill-opacity: 1.0;
         }
 
-        .miniItem2 {
-            fill:rgb(91, 141, 223);
-            fill-opacity: .7;
-            stroke-width: 6;
+        .span:hover {
+            fill: rgb(237, 185, 56);
+        }
+
+        text {
+            pointer-events: none;
         }
 
         .brush .selection {
