--- a/frontend/src/websockets.html
+++ b/frontend/src/websockets.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>WebSocket Test</title>
-	</head>
-	<body>
-		<script>
-			var socket = new WebSocket("ws://127.0.0.1:3001", "cyclotron-ws");
-			socket.onmessage = function (event) {
-                var msg = JSON.parse(event.data);
-                console.log(msg)
-				var received = document.getElementById("received");
-				received.appendChild(document.createElement("br"));
-				received.appendChild(document.createTextNode(event.data));
-			};
-            socket.onopen = function(event) {
-                socket.send("test.log");
-            };
-            socket.onerror = function(event) {
-                console.log("onerror", event);
-            };
-            socket.onclose = function(event) {
-                console.log("onclose", event);
-            };
-		</script>
-			<p id="received">
-			  <strong>Received Messages:</strong>
-            </p>
-	</body>
+  <head>
+	<meta charset="utf-8">
+	<title>WebSocket Test</title>
+  </head>
+  <body>
+    <script type="text/javascript" src="model.js"></script>
+	<script>window.spans = ws_test();</script>
+	<p id="received">
+	  <strong>Received Messages:</strong>
+    </p>
+  </body>
 </html>
