clean up transitions

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -32,6 +32,7 @@
         .span {
             fill:rgb(91, 141, 223);
             fill-opacity: 1.0;
+            cursor: pointer;
         }
 
         .span:hover {
