--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,14 +11,8 @@
         }
 
         .span-text {
-            font: 9px sans-serif;
-            color: white;
-            fill: "white",
-        }
-
-        .main text {
             font: 12px sans-serif;
-            color: white;
+            fill: white;
         }
 
         .miniItem0 {
