--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -49,7 +49,8 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="model.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
