--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>Chronological Diagram of Asia</title>
+    <title>Cyclotron</title>
     <script type="text/javascript" src="d3.js"></script>
     <style type="text/css">
         body {
