--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,6 +38,18 @@
             fill: dodgerblue;
             fill-opacity: .365;
         }
+
+        #triangle {
+            fill: darkblue;
+            /* stroke: white; */
+            stroke-width: 2px;
+        }
+
+        .wakeup-line {
+            stroke: darkblue;
+            stroke-width: 3px;
+            opacity: 0.50;
+        }
     </style>
 </head>
 
