--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,7 +26,7 @@
         }
 
         .span:hover {
-            fill: rgb(237, 185, 56);
+            fill-opacity: 0.9;
         }
 
         text {
