--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="d3.js"></script>
     <style type="text/css">
         body {
-            margin: 0;
+            margin: 5px;
         }
 
         .span-text {
