--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
         }
 
         .span-text {
-            font-family: sans-serif;
+            font: lighter 10px sans-serif;
             fill: white;
         }
 
