add text masking

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,9 @@
       body {
           margin: 0;
       }
+      canvas {
+          padding: 5px;
+      }
       .viewport {
           position: absolute;
           display: block;
